# AnyaDance

./: .gitignore  AGENTS.md  ASSETS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  architecture.zh-CN.md  building.md  building.zh-CN.md  device-model.md  device-model.zh-CN.md  installation.md  installation.zh-CN.md  mmd-dance.md  mmd-dance.zh-CN.md  protocol.md  protocol.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md
driver/resources/settings/: default.vrsettings
scripts/: blender_export_mmd.py  build_driver.ps1  common_steamvr.ps1  register_driver.ps1  unregister_driver.ps1
src/core/: constants.h  finger_control.h  frame_state.cpp  frame_state.h  input_state.cpp  input_state.h  json.cpp  json.h  manipulation.cpp  manipulation.h  math3d.cpp  math3d.h  mmd_retarget.cpp  mmd_retarget.h  nya_format.cpp  nya_format.h  pose_sample.h  protocol.cpp  protocol.h  solved_motion.cpp  solved_motion.h  tpose.cpp  tpose.h  udp_log.cpp  udp_log.h
src/driver/: driver_factory.cpp  log.cpp  log.h  server_driver.cpp  server_driver.h  udp_pose_receiver.cpp  udp_pose_receiver.h  virtual_device.cpp  virtual_device.h
src/tool/: driver_control.cpp  driver_control.h  localization.cpp  localization.h  main.cpp  mmd_dance.cpp  mmd_dance.h  resource.h  tool.rc
src/ui/: driver_control.cpp  driver_control.h  input.cpp  layout.h  localization.cpp  localization.h  main.cpp  mmd_dance.cpp  mmd_dance.h  panel_body.cpp  panel_dance.cpp  panel_log.cpp  panel_main.cpp  theme.cpp  theme.h  ui.rc  ui_state.cpp  ui_state.h  window_size.h
tests/: main.cpp  test_finger.cpp  test_frame_state.cpp  test_framework.cpp  test_framework.h  test_input.cpp  test_json.cpp  test_manipulation.cpp  test_math3d.cpp  test_mmd.cpp  test_nya.cpp  test_protocol.cpp  test_tpose.cpp  test_udp_log.cpp  test_ui_layout.cpp  tests.h
